adding server side fixes for react router 404 responses

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -34,3 +34,12 @@
     bottom: 0;
     width: 100%;
 }
+
+.jumbo {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.lead {
+    margin-bottom: 0px;
+}
